新增加 maruku support 與 table css

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,8 @@ auto: true
 server: true
 permalink: none
 
-source: .
-destination: ./pragmatic-rails
+future:      true
+markdown:    maruku
+
+maruku:
+   use_divs:  true
